# wechathello

./: .gitignore  README.md
.github/workflows/: ci.yml  daily-push.yml  period-care.yml
config/: recipients.json
love_push/: cli.py  compose.py  config.py  details.py  models.py  service.py  weather.py  wechat.py
tests/: test_compose.py  test_config.py  test_details.py  test_service.py  test_weather.py  test_wechat.py  test_workflow.py
wechathello/: LICENSE  README.md  pyproject.toml
wechathello/love_push/: __init__.py  __main__.py  http.py  models.py  wechat.py
wechathello/tests/: test_wechat.py
