[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qingzhe-daily"
version = "1.0.0"
description = "给异地恋人的微信天气与鼓励定时推送"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "清浙小报" }]
dependencies = []

[project.scripts]
qingzhe-daily = "love_push.cli:main"

[tool.setuptools.packages.find]
include = ["love_push*"]

